大枠できた

--- a/toppage/toppage.html
+++ b/toppage/toppage.html
@@ -18,9 +18,11 @@
     <div class="header_container">
       <header>
           <p class="tikuzennni"></p>
-          <p>
-            <img src="../image/poe.jpg" alt="" width="130vp">
-          </p>
+          <div>
+            <a href="http://127.0.0.1:5500/toppage/toppage.html">
+              <img src="../image/posselab.jpg" alt="" width="150vp">
+            </a>
+          </div>
           <input type="checkbox" id="confirm">
           <span class="hum1"></span>
           <span class="hum2"></span>
@@ -36,7 +38,7 @@
   </div>
     <main>
       <div class="title">
-        <img src="../image/poe.jpg" alt="" width="100%">
+        <img src="../image/posselab.jpg" alt="" width="500vp">
       </div>
       <!-- Slider main container -->
       <div class="swiper">
@@ -138,9 +140,7 @@
       
 
       <section class="resaon">
-        <p class="img">
-          <img src="../image/arrow555.jpg" alt="" width="300vp" />
-        </p>
+
         <div class="reasonText">
           <h3 class="white">このサイトを作った経緯</h3>
           <p>
