--- a/quiz/quiz-score/quize-score.html
+++ b/quiz/quiz-score/quize-score.html
@@ -5,20 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="quiz.css">
 </head>
+<link rel="stylesheet" href="quiz-score.css">
 <body>
-    <section class="container">
-        <p id="question"></p>
-        <ul id="choices"></ul>
-        <div id="btn" class="disabled">next</div>
-    </section>
-
     <section id="result" class="hidden">
         <p></p>
         <a href="">Replay?</a>
     </section>
 
-    <script src="quiz.js"></script>
+    <script src="quiz-score.js"></script>
 </body>
 </html>
