--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -11,12 +11,12 @@
     <section class="container">
         <p id="question"></p>
         <ul id="choices"></ul>
-        <div id="btn" class="disabled">next</div>
+        <div class="box"></div>
+        <div id="btn" class="disabled">NEXT</div>
     </section>
 
     <section id="result" class="hidden">
         <p></p>
-        <a href="">Replay?</a>
     </section>
 
     <script src="quiz.js"></script>
