クイズページの過程

--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,24 +9,20 @@
     <link rel="stylesheet" href="/quiz/quiz.css">
 </head>
 <body>
-<<<<<<<<< Temporary merge branch 1
     <div class="main" id="wrapper">
         <img src="/image/quiz.jpeg" alt="">
-        <section class="container">
-            <div id="question">
+        <div class="container">
+            <section id="question">
                 <p></p>
-            </div>
+            </section>
             <ul id="choices"></ul>
-            <div id="btn" class="disabled">next</div>
-        </section>
-        <script src="/quiz/quiz.js"></script>
+            <button id="btn" class="disabled">NEXT</button>
+            <section id="result" class="hidden">
+                <p></p>
+
+            </section>
+        </div>
     </div>
-
-
-    <section id="result" class="hidden">
-        <p></p>
-        <a href="">Replay?</a>
-    </section>
 
     <script src="quiz.js"></script>
 
