--- a/toppage/toppage.html
+++ b/toppage/toppage.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>POSSE Lab</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="toppage.css" />
+    <!-- <link rel="stylesheet" href="toppage.css" media="(max-width: 1023px)"/> -->
+    <link rel="stylesheet" href="toppage pc.css" media="" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
@@ -30,9 +31,9 @@
           <label for="confirm"></label>
           
           <ul>
-              <li><a href="http://127.0.0.1:5500/toppage/toppage.html#">トップページ</a></li>
-              <li><a href="http://127.0.0.1:5500/quiz/quiz.html">クイズページ</a></li>
-              <li><a href="http://127.0.0.1:5500/generater/generater.html">コトジェネレーター</a></li>
+              <li><a href="../toppage/toppage.html">トップページ</a></li>
+              <li><a href="../quiz/quiz_start/quiz_1.html">クイズページ</a></li>
+              <li><a href="../generater/generater_start/generater_start.html">コトジェネレーター</a></li>
           </ul>
       </header>
   </div>
