--- a/generater/generater.html
+++ b/generater/generater.html
@@ -27,9 +27,9 @@
           <label for="confirm"></label>
           
           <ul>
-              <li><a href="#">トップページ</a></li>
-              <li><a href="#">クイズページ</a></li>
-              <li><a href="#">コトジェネレーター</a></li>
+              <li><a href=".././toppage/toppage.html">トップページ</a></li>
+              <li><a href=".././quiz/quiz_start/quiz_1.html">クイズページ</a></li>
+              <li><a href="../generater/generater_start/generater_start.html">コトジェネレーター</a></li>
           </ul>
       </header>
       <main>
@@ -42,7 +42,7 @@
         </section> -->
       </main>
 
-      
+
       <div id="startButton">
         遊ぶお題を生成
       </div>
