--- a/quiz/quiz_start/quiz_1.html
+++ b/quiz/quiz_start/quiz_1.html
@@ -9,6 +9,27 @@
     <link rel="stylesheet" href="/quiz/reset.css">
 </head>
 <body>
+    <div class="header_container">
+        <header>
+            <p class="tikuzennni"></p>
+            <div>
+                <a href="http://127.0.0.1:5500/toppage/toppage.html">
+                    <img src="../image/posselab.jpg" alt="" width="150vp">
+                </a>
+            </div>
+            <input type="checkbox" id="confirm">
+            <span class="hum1"></span>
+            <span class="hum2"></span>
+            <span class="hum3"></span>
+            <label for="confirm"></label>
+    
+            <ul>
+                <li><a href="/toppage/toppage.html">トップページ</a></li>
+                <li><a href="/quiz/quiz_start/quiz_1.html">クイズページ</a></li>
+                <li><a href="/generater/generater_start/generater_start.html">コトジェネレーター</a></li>
+            </ul>
+        </header>
+
     <div class="main">
         <img src="/image/quiz.jpeg" alt="">
         <div class="container">
