--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -9,22 +9,45 @@
     <link rel="stylesheet" href="/quiz/quiz.css">
 </head>
 <body>
+    <div class="container">
+        <header>
+            <div>
+                <a href="http://127.0.0.1:5500/toppage/toppage.html">
+                <img src="../image/posselab.jpg" alt="" width="">
+                </a>
+            </div>
+            <input type="checkbox" id="confirm">
+            <span class="hum1"></span>
+            <span class="hum2"></span>
+            <span class="hum3"></span>
+            <label for="confirm"></label>
+            
+            <ul class="header_container">
+                <li class="header_item"><a href="http://127.0.0.1:5500/toppage/toppage.html#">トップページ</a></li>
+                <li class="header_item"><a href="http://127.0.0.1:5500/quiz/quiz.html">クイズページ</a></li>
+                <li class="header_item"><a href="http://127.0.0.1:5500/generater/generater.html">コトジェネレーター</a></li>
+            </ul>
+        </header>
     <div class="main" id="wrapper">
         <img src="/image/quiz.jpeg" alt="">
-        <div class="container">
+        <div class="main_container">
             <section id="question">
+                <!-- <span id="js_number">Q</span> -->
                 <p></p>
             </section>
             <ul id="choices"></ul>
             <button id="btn" class="disabled">NEXT</button>
             <section id="result" class="hidden">
                 <p></p>
-
             </section>
         </div>
     </div>
-
+    <footer>
+        <div>
+            <img src="../image/logo.svg" alt="" width="">
+        </div>
+    </footer>
+    </div>
     <script src="quiz.js"></script>
-
 </body>
 </html>
