--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -28,6 +28,7 @@
                 <li class="header_item"><a href="http://127.0.0.1:5500/generater/generater.html">コトジェネレーター</a></li>
             </ul>
         </header>
+        </div>
     <div class="main" id="wrapper">
         <img src="/image/quiz.jpeg" alt="">
         <div class="main_container">
