--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>3期生クイズ</title>
     <link rel="stylesheet" href="/quiz/reset.css">
     <link rel="stylesheet" href="/quiz/quiz.css">
 </head>
