--- a/quiz/quiz_start/quiz_1.html
+++ b/quiz/quiz_start/quiz_1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>筑前煮　クイズページスタート</title>
+    <title>クイズスkuタート</title>
     <link rel="stylesheet" href="../reset.css">
     <link rel="stylesheet" href="/quiz/quiz_start/quiz1_.css">
 </head>
