リンク先入れました

--- a/quiz/quiz_start/quiz_1.html
+++ b/quiz/quiz_start/quiz_1.html
@@ -13,7 +13,7 @@
 
         <header>
             <div>
-                <a href="http://127.0.0.1:5500/toppage/toppage.html">
+                <a href="../../toppage/toppage.html">
                 <img src="../../image/posselab.jpg" alt="" width="">
                 </a>
             </div>
@@ -24,9 +24,9 @@
             <label for="confirm"></label>
             
             <ul class="header_container">
-                <li class="header_item"><a href="http://127.0.0.1:5500/toppage/toppage.html#">トップページ</a></li>
-                <li class="header_item"><a href="http://127.0.0.1:5500/quiz/quiz.html">クイズページ</a></li>
-                <li class="header_item"><a href="http://127.0.0.1:5500/generater/generater.html">コトジェネレーター</a></li>
+                <li class="header_item"><a href="../../toppage/toppage.html">トップページ</a></li>
+                <li class="header_item"><a href="../../quiz/quiz.html">クイズページ</a></li>
+                <li class="header_item"><a href="../../generater/generater.html">コトジェネレーター</a></li>
             </ul>
         </header>
         <main>
