--- a/generater/generater.html
+++ b/generater/generater.html
@@ -16,7 +16,7 @@
       <header>
           <p class="tikuzennni"></p>
           <div>
-            <a href="http://127.0.0.1:5500/toppage/toppage.html">
+            <a href="../toppage/toppage.html">
               <img src="../image/posselab.jpg" alt="" width="150vp">
             </a>
           </div>
@@ -27,9 +27,9 @@
           <label for="confirm"></label>
           
           <ul>
-              <li><a href="#">トップページ</a></li>
-              <li><a href="#">クイズページ</a></li>
-              <li><a href="#">コトジェネレーター</a></li>
+              <li><a href="../toppage/toppage.html">トップページ</a></li>
+              <li><a href="../quiz/quiz.html">クイズページ</a></li>
+              <li><a href="../generater/generater.html">コトジェネレーター</a></li>
           </ul>
       </header>
       <main>
