--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -12,8 +12,8 @@
     <div class="container">
         <header>
             <div>
-                <a href="http://127.0.0.1:5500/toppage/toppage.html">
-                <img src="../image/posselab.jpg" alt="" width="">
+                <a href="../toppage/toppage.html">
+                <img src="../image/posselab.jpg" alt=""" width="">
                 </a>
             </div>
             <input type="checkbox" id="confirm">
@@ -23,9 +23,9 @@
             <label for="confirm"></label>
             
             <ul class="header_container">
-                <li class="header_item"><a href="http://127.0.0.1:5500/toppage/toppage.html#">トップページ</a></li>
-                <li class="header_item"><a href="http://127.0.0.1:5500/quiz/quiz.html">クイズページ</a></li>
-                <li class="header_item"><a href="http://127.0.0.1:5500/generater/generater.html">コトジェネレーター</a></li>
+                <li class="header_item"><a href="../toppage/toppage.html">トップページ</a></li>
+                <li class="header_item"><a href="../quiz/quiz.html">クイズページ</a></li>
+                <li class="header_item"><a href="../generater/generater.html">コトジェネレーター</a></li>
             </ul>
         </header>
         </div>
