--- a/toppage/toppage.html
+++ b/toppage/toppage.html
@@ -19,7 +19,7 @@
     <div class="header_container">
       <header>
           <div>
-            <a href="http://127.0.0.1:5500/toppage/toppage.html">
+            <a href="../toppage/toppage.html">
               <img src="../image/posselab.jpg" alt="" width="">
             </a>
           </div>
@@ -30,9 +30,9 @@
           <label for="confirm"></label>
           
           <ul>
-              <li><a href="http://127.0.0.1:5500/toppage/toppage.html#">トップページ</a></li>
-              <li><a href="http://127.0.0.1:5500/quiz/quiz.html">クイズページ</a></li>
-              <li><a href="http://127.0.0.1:5500/generater/generater.html">コトジェネレーター</a></li>
+              <li><a href="../toppage/toppage.html">トップページ</a></li>
+              <li><a href="../quiz/quiz.html">クイズページ</a></li>
+              <li><a href="../generater/generater.html">コトジェネレーター</a></li>
           </ul>
       </header>
   </div>
