--- a/quiz/quiz-score/quize-score.html
+++ b/quiz/quiz-score/quize-score.html
@@ -9,8 +9,11 @@
 <link rel="stylesheet" href="quiz-score.css">
 <body>
     <section id="result" class="hidden">
-        <p></p>
-        <a href="">Replay?</a>
+    <button #btn>
+
+    <a href="../quiz.html">Replay?</a>
+    </button>
+        
     </section>
 
     <script src="quiz-score.js"></script>
