--- a/quiz/quiz_start/quiz_1.html
+++ b/quiz/quiz_start/quiz_1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>クイズスkuタート</title>
+    <title>クイズスタート</title>
     <link rel="stylesheet" href="../reset.css">
     <link rel="stylesheet" href="/quiz/quiz_start/quiz1_.css">
 </head>
@@ -26,7 +26,7 @@
             <ul class="header_container">
                 <li class="header_item"><a href="../../toppage/toppage.html">トップページ</a></li>
                 <li class="header_item"><a href="../../quiz/quiz.html">クイズページ</a></li>
-                <li class="header_item"><a href="../../generater/generater.html">コトジェネレーター</a></li>
+                <li class="header_item"><a href="../../generater/generater_start/generater_start.html">コトジェネレーター</a></li>
             </ul>
         </header>
         <main>
