--- a/toppage/toppage.html
+++ b/toppage/toppage.html
@@ -1,21 +1,3 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="ja">
   <head>
@@ -50,7 +32,7 @@
           <ul>
               <li><a href="../toppage/toppage.html">トップページ</a></li>
               <li><a href="../quiz/quiz.html">クイズページ</a></li>
-              <li><a href="../generater/generater.html">コトジェネレーター</a></li>
+              <li><a href="../generater/generater_start/generater_start.html">コトジェネレーター</a></li>
           </ul>
       </header>
   </div>
