--- a/generater/generater.html
+++ b/generater/generater.html
@@ -29,7 +29,7 @@
           <ul>
               <li><a href="../toppage/toppage.html">トップページ</a></li>
               <li><a href="../quiz/quiz.html">クイズページ</a></li>
-              <li><a href="../generater/generater.html">コトジェネレーター</a></li>
+              <li><a href="../generater/generater_start/generater_start.html">コトジェネレーター</a></li>
           </ul>
       </header>
       <main>
