--- a/generater/generater_start/generater_start.html
+++ b/generater/generater_start/generater_start.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>筑前煮　コトジェネレーターページスタート</title>
-    <link rel="stylesheet" href="/generater/generater_start/quiz1_.css">
+    <title>コトジェネレータースタート</title>
+
     <link rel="stylesheet" href="/generater/reset.css">
+    <link rel="stylesheet" href="/generater/generater_start/generater_start.css">
 </head>
 <div class="header_container">
     <header>
         <p class="tikuzennni"></p>
         <div>
-          <a href="http://127.0.0.1:5500/toppage/toppage.html">
-            <img src="../image/posselab.jpg" alt="" width="150vp">
+          <a href="../../toppage/toppage.html">
+            <img src="../../image/posselab.jpg" alt="" width="150vp">
           </a>
         </div>
         <input type="checkbox" id="confirm">
@@ -23,9 +24,9 @@
         <label for="confirm"></label>
         
         <ul>
-            <li><a href="http://127.0.0.1:5500/toppage/toppage.html#">トップページ</a></li>
-            <li><a href="http://127.0.0.1:5500/quiz/quiz.html">クイズページ</a></li>
-            <li><a href="http://127.0.0.1:5500/generater/generater.html">コトジェネレーター</a></li>
+            <li><a href="../../toppage/toppage.html">トップページ</a></li>
+            <li><a href="../../quiz/quiz.html">クイズページ</a></li>
+            <li><a href="../../generater/generater_start/generater_start.html">コトジェネレーター</a></li>
         </ul>
     </header>
 <body>
@@ -43,7 +44,7 @@
 </body>
 <footer>
     <div>
-        <img src="../image/logo.svg" alt="" width="">
+        <img src="../../image/logo.svg" alt="" width="">
     </div>
     <!-- <p>
       2022
