--- a/toppage/toppage.html
+++ b/toppage/toppage.html
@@ -31,7 +31,7 @@
           
           <ul>
               <li><a href="../toppage/toppage.html">トップページ</a></li>
-              <li><a href="../quiz/quiz.html">クイズページ</a></li>
+              <li><a href="../quiz/quiz_start/quiz_1.html">クイズページ</a></li>
               <li><a href="../generater/generater_start/generater_start.html">コトジェネレーター</a></li>
           </ul>
       </header>
