--- a/quiz/quiz_start/quiz_1.html
+++ b/quiz/quiz_start/quiz_1.html
@@ -25,7 +25,7 @@
             
             <ul class="header_container">
                 <li class="header_item"><a href="../../toppage/toppage.html">トップページ</a></li>
-                <li class="header_item"><a href="../../quiz/quiz.html">クイズページ</a></li>
+                <li class="header_item"><a href="../../quiz/quiz_start/quiz_1.html">クイズページ</a></li>
                 <li class="header_item"><a href="../../generater/generater_start/generater_start.html">コトジェネレーター</a></li>
             </ul>
         </header>
