--- a/toppage/toppage.html
+++ b/toppage/toppage.html
@@ -30,9 +30,9 @@
           <label for="confirm"></label>
           
           <ul>
-              <li><a href="../toppage/toppage.html">トップページ</a></li>
-              <li><a href="../quiz/quiz_start/quiz_1.html">クイズページ</a></li>
-              <li><a href="../generater/generater_start/generater_start.html">コトジェネレーター</a></li>
+              <li><a href="https://posse-ap.github.io/posse2-hackathon-202209-team3I/toppage/toppage.html">トップページ</a></li>
+              <li><a href="https://posse-ap.github.io/posse2-hackathon-202209-team3I/quiz/quiz_start/quiz_1.html">クイズページ</a></li>
+              <li><a href="https://posse-ap.github.io/posse2-hackathon-202209-team3I/generater/generater_start/generater_start.html">コトジェネレーター</a></li>
           </ul>
       </header>
   </div>
