--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -23,9 +23,9 @@
             <label for="confirm"></label>
             
             <ul class="header_container">
-                <li class="header_item"><a href="../toppage/toppage.html">トップページ</a></li>
-                <li class="header_item"><a href="../quiz/quiz_start/quiz_1.html">クイズページ</a></li>
-                <li class="header_item"><a href="../generater/generater_start/generater_start.html">コトジェネレーター</a></li>
+                <li class="header_item"><a href="https://posse-ap.github.io/posse2-hackathon-202209-team3I/toppage/toppage.html">トップページ</a></li>
+                <li class="header_item"><a href="https://posse-ap.github.io/posse2-hackathon-202209-team3I/quiz/quiz_start/quiz_1.html">クイズページ</a></li>
+                <li class="header_item"><a href="https://posse-ap.github.io/posse2-hackathon-202209-team3I//generater/generater_start/generater_start.html">コトジェネレーター</a></li>
             </ul>
         </header>
         </div>
