--- a/quiz/quiz_start/quiz_1.html
+++ b/quiz/quiz_start/quiz_1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>クイズスタート</title>
-    <link rel="stylesheet" href="/quiz/quiz_start/quiz1_.css">
+    <link rel="stylesheet" href="https://posse-ap.github.io/posse2-hackathon-202209-team3I/quiz/quiz_start/quiz1_.css">
     <link rel="stylesheet" href="../reset.css">
 </head>
 <body>
@@ -24,9 +24,9 @@
             <label for="confirm"></label>
             
             <ul class="header_container">
-                <li class="header_item"><a href="../../toppage/toppage.html">トップページ</a></li>
-                <li class="header_item"><a href="../../quiz/quiz_start/quiz_1.html">クイズページ</a></li>
-                <li class="header_item"><a href="../../generater/generater_start/generater_start.html">コトジェネレーター</a></li>
+                <li class="header_item"><a href="https://posse-ap.github.io/posse2-hackathon-202209-team3I/toppage/toppage.html">トップページ</a></li>
+                <li class="header_item"><a href="https://posse-ap.github.io/posse2-hackathon-202209-team3I/quiz/quiz_start/quiz_1.html">クイズページ</a></li>
+                <li class="header_item"><a href="https://posse-ap.github.io/posse2-hackathon-202209-team3I/generater/generater_start/generater_start.html">コトジェネレーター</a></li>
             </ul>
         </header>
         <main>
