--- a/generater/generater.html
+++ b/generater/generater.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>POSSE Lab</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="https://posse-ap.github.io/posse2-hackathon-202209-team3I/generater.css" />
+    <link rel="stylesheet" href="../generater/reset.css">
+    <link rel="stylesheet" href="../generater/generater.css" />
 
     <script src = "generater.js"></script>
     <!-- <script src="toppage.js"></script> -->
