--- a/generater/generater_start/generater_start.html
+++ b/generater/generater_start/generater_start.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>コトジェネレータースタート</title>
 
-    <link rel="stylesheet" href="/generater/reset.css">
-    <link rel="stylesheet" href="https://posse-ap.github.io/posse2-hackathon-202209-team3I/generater/generater_start/generater_start.css">
+    <link rel="stylesheet" href="../reset.css">
+    <link rel="stylesheet" href="../generater_start/generater_start.css">
 </head>
 <div class="header_container">
     <header>
@@ -26,7 +26,7 @@
         <ul>
             <li><a href="https://posse-ap.github.io/posse2-hackathon-202209-team3I/toppage/toppage.html/">トップページ</a></li>
             <li><a href="https://posse-ap.github.io/posse2-hackathon-202209-team3I/quiz/quiz_start/quiz_start.html">クイズページ</a></li>
-            <li><a href="https://posse-ap.github.io/posse2-hackathon-202209-team3Igenerater/generater_start/generater_start.html">コトジェネレーター</a></li>
+            <li><a href="https://posse-ap.github.io/posse2-hackathon-202209-team3I/generater/generater_start/generater_start.html">コトジェネレーター</a></li>
         </ul>
     </header>
 <body>
