--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3期生クイズ</title>
     <link rel="stylesheet" href="/quiz/reset.css">
-    <link rel="stylesheet" href="https://posse-ap.github.io/posse2-hackathon-202209-team3I/quiz/quiz.css">
+    <link rel="stylesheet" href="/quiz/quiz.css">
 </head>
 <body>
     <div class="container">
