--- a/generater/generater_start/generater_start.html
+++ b/generater/generater_start/generater_start.html
@@ -37,7 +37,7 @@
                 何が出るかな？？👀
             </p>
         </div>
-        <button onclick="location.href='/generater/generater.html'">
+        <button onclick="location.href='../../generater/generater.html'">
             START
         </button>
     </div>
