--- a/quiz/quiz_start/quiz_1.html
+++ b/quiz/quiz_start/quiz_1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>クイズスタート</title>
     <link rel="stylesheet" href="../reset.css">
-    <link rel="stylesheet" href="quiz1_css">
+    <link rel="stylesheet" href="../quiz.css">
 </head>
 <body>
     
@@ -38,7 +38,7 @@
                         君は何問正解できるかな？
                     </p>
                 </div>
-                <button onclick="location.href='/quiz/quiz.html'">
+                <button onclick="location.href='../../quiz/quiz.html'">
                 START
                 </button>
             </div>
