--- a/quiz/quiz_start/quiz_1.html
+++ b/quiz/quiz_start/quiz_1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>クイズスタート</title>
     <link rel="stylesheet" href="../reset.css">
-    <link rel="stylesheet" href="../quiz.css">
+    <link rel="stylesheet" href="quiz1_.css">
 </head>
 <body>
     
